Fix picture description edit and gallery numbers on IE8

--- a/public/stylesheets/carousel.css
+++ b/public/stylesheets/carousel.css
@@ -87,3 +87,7 @@
   background:#FFF;
   font-weight: bold;
 }
+
+.ie8 .doom-carousel .pic-nr {
+  top: -40px;
+}
